# algonauts2023_DINOv2

./: README.md  flowsheet.drawio  package_result.sh  pyproject.toml  train.ipynb  train.py
datasets/: readme.md
